legacy/public/ocvpn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-tcp
  namespace: ocs
spec:
  tls:
    passthrough: true
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`ocs.hyvel.eu`)
      services:
        - name: ocs-tcp
          port: 443
          proxyProtocol:
            version: 2
